5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1773_2107.log
== TEST (2019-05-24 19:29:12) 
-- CODE:
x=input("Digite uma string: ").upper()
print(x[0])
-- OUTPUT:
A
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:29:50) 
-- CODE:
x=input("Digite uma string: ").upper()
print(x(count("A")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(x(count("A")))
NameError: name 'count' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:37:20) 
-- CODE:
x=input("Digite uma string: ").upper()
print(x.count("A",0,6)
-- ERROR:
File "XXXX", line 3
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:37:27) 
-- CODE:
x=input("Digite uma string: ").upper()
print(x.count("A",0,6))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:38:20) 
-- CODE:
x=input("Digite uma string: ").upper()
print(x.count("A,E,I,O,U",0,6))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:39:15) 
-- CODE:
x=input("Digite uma string: ").upper()
t=(len(x)-1)
a=x.count("A",0,t)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:39:25) 
-- CODE:
x=input("Digite uma string: ").upper()
t=(len(x)-1)
a=x.count("A",0,t)
print(a)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:40:28) 
-- CODE:
x=input("Digite uma string: ").upper()
t=(len(x)-1)
a=x.count("A",0,t)
b=x.count("E",0,t)
c=x.count("I",0,t)
e=x.count("O",0,t)
d=x.count("U",0,t)
print(a+b+c+e+d)

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:40:43) 
-- CODE:
x=input("Digite uma string: ").upper()
t=(len(x)-1)
a=x.count("A",0,t)
b=x.count("E",0,t)
print(b)
c=x.count("I",0,t)
e=x.count("O",0,t)
d=x.count("U",0,t)
print(a+b+c+e+d)

-- OUTPUT:
0
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:40:58) 
-- CODE:
x=input("Digite uma string: ").upper()
t=(len(x))
a=x.count("A",0,t)
b=x.count("E",0,t)
print(b)
c=x.count("I",0,t)
e=x.count("O",0,t)
d=x.count("U",0,t)
print(a+b+c+e+d)

-- OUTPUT:
0
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:41:51) 
-- CODE:
x=input("Digite uma string: ").upper()
t=(len(x))
a=x.count("A",0,t)
b=x.count("E",0,t)
c=x.count("I",0,t)
e=x.count("O",0,t)
d=x.count("U",0,t)
n=a+b+c+d+e
print(n)
print(t-n)

-- OUTPUT:
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 19:41:59) 
-- CODE:
x=input("Digite uma string: ").upper()
t=(len(x))
a=x.count("A",0,t)
b=x.count("E",0,t)
c=x.count("I",0,t)
e=x.count("O",0,t)
d=x.count("U",0,t)
n=a+b+c+d+e
print(n)
print(t-n)

-- EXECUTION TIME:
0.134365
-- TEST CASE 1:
---- input:
ABCD
---- correct output:
1
3
---- user output:
1
3
-- TEST CASE 2:
---- input:
STRING
---- correct output:
1
5
---- user output:
1
5
-- TEST CASE 3:
---- input:
TESTE
---- correct output:
2
3
---- user output:
2
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
